--- a/EFAWeatherWatch/Base.lproj/Interface.storyboard
+++ b/EFAWeatherWatch/Base.lproj/Interface.storyboard
@@ -1,16 +1,89 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch38" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11055"/>
+        <deployment identifier="watchOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11508"/>
     </dependencies>
     <scenes>
-        <!--Interface Controller-->
+        <!--Now Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="NowController" customModule="EFAWeatherWatch_Extension">
+                    <items>
+                        <label alignment="left" text="64°" id="dDa-qq-xD5">
+                            <fontDescription key="font" type="system" pointSize="35"/>
+                        </label>
+                        <label alignment="left" text="Clear" id="ovf-Na-9XS">
+                            <color key="textColor" red="0.47450980539999998" green="0.8392156959" blue="0.97647058959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <fontDescription key="font" type="system" pointSize="11"/>
+                        </label>
+                        <group width="1" alignment="left" id="08H-pH-k2L">
+                            <items>
+                                <label alignment="left" text="58°" id="7sK-hG-oQM">
+                                    <fontDescription key="font" type="system" pointSize="11"/>
+                                </label>
+                                <label alignment="left" text="72°" id="V8m-kn-bpu">
+                                    <fontDescription key="font" type="system" pointSize="11"/>
+                                </label>
+                            </items>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="conditionLabel" destination="ovf-Na-9XS" id="m2v-HP-qUm"/>
+                        <outlet property="highLabel" destination="V8m-kn-bpu" id="nJv-b2-lhM"/>
+                        <outlet property="lowLabel" destination="7sK-hG-oQM" id="ena-Zt-yM7"/>
+                        <outlet property="tempLabel" destination="dDa-qq-xD5" id="SgJ-25-ZGw"/>
+                        <segue destination="5Ni-SM-46t" kind="relationship" relationship="nextPage" id="FVY-je-oc8"/>
+                    </connections>
+                </controller>
             </objects>
             <point key="canvasLocation" x="220" y="345"/>
+        </scene>
+        <!--Future Controller-->
+        <scene sceneID="OwC-ZU-jyr">
+            <objects>
+                <controller id="5Ni-SM-46t" customClass="FutureController" customModule="EFAWeatherWatch_Extension">
+                    <items>
+                        <table alignment="left" id="fOR-Ft-RHj">
+                            <items>
+                                <tableRow selectable="NO" id="q6Z-LZ-2Od" customClass="WeatherRowController" customModule="EFAWeatherWatch_Extension">
+                                    <group key="rootItem" width="1" height="55" alignment="left" layout="vertical" id="ENR-4Y-ei6">
+                                        <items>
+                                            <group width="1" alignment="left" id="lJR-66-vub">
+                                                <items>
+                                                    <label width="0.33000000000000002" alignment="left" text="Label" id="hnP-Y8-Ni9"/>
+                                                    <label width="0.33000000000000002" alignment="left" text="Label" id="ywr-XG-nF3"/>
+                                                    <label width="0.33000000000000002" alignment="left" text="Label" id="YFB-Tw-1yq">
+                                                        <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </label>
+                                                </items>
+                                            </group>
+                                            <label alignment="left" text="Label" numberOfLines="0" id="q7K-bL-Ve0">
+                                                <color key="textColor" red="0.47450980539999998" green="0.8392156959" blue="0.97647058959999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </label>
+                                            <separator alignment="left" id="xBp-9f-rng"/>
+                                        </items>
+                                    </group>
+                                    <connections>
+                                        <outlet property="conditionLabel" destination="q7K-bL-Ve0" id="aZP-qN-4na"/>
+                                        <outlet property="dayLabel" destination="hnP-Y8-Ni9" id="3EQ-Vf-Vg7"/>
+                                        <outlet property="highLabel" destination="ywr-XG-nF3" id="pwu-EU-Kfi"/>
+                                        <outlet property="lowLabel" destination="YFB-Tw-1yq" id="oEO-gT-tkE"/>
+                                    </connections>
+                                </tableRow>
+                            </items>
+                        </table>
+                    </items>
+                    <connections>
+                        <outlet property="tableView" destination="fOR-Ft-RHj" id="U7y-3a-N8t"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="472" y="345"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -31,7 +104,7 @@
         <!--Notification Controller-->
         <scene sceneID="ZPc-GJ-vnh">
             <objects>
-                <controller id="4sK-HA-Art" customClass="NotificationController" customModuleProvider="target"/>
+                <controller id="4sK-HA-Art" customClass="NotificationController" customModule="EFAWeatherWatch" customModuleProvider="target"/>
             </objects>
             <point key="canvasLocation" x="468" y="643"/>
         </scene>
